--- a/notebook/automod_test.ipynb
+++ b/notebook/automod_test.ipynb
@@ -66,12 +66,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "1e4e35aa-8eb1-44f0-832f-5946fd4a2ec4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "~label"
+    "not (label)"
    ]
   },
   {
